chore(build): plop and storybook

--- a/templates/component.hbs
+++ b/templates/component.hbs
@@ -1,11 +1,11 @@
 import React from 'react';
 import styled from 'styled-components';
 
-const {{name}} = ({ children, to }) => {
-  return <PageLink href={to}>{children}</PageLink>;
+const {{name}} = ({ children }) => {
+  return <Container>{children}</Container>;
 };
 
-const PageLink = styled.div`
+const Container = styled.div`
   color: #61dafb;
 `;
 
