--- a/templates/store.hbs
+++ b/templates/store.hbs
@@ -1,6 +1,6 @@
 /* eslint-disable no-param-reassign */
 import { action, thunk } from 'easy-peasy';
-import { Data } from '../../api';
+import { Data } from 'api';
 
 export default {
   page: '{{name}}',
