feat(other): file upload

--- a/templates/feature.hbs
+++ b/templates/feature.hbs
@@ -1,6 +1,6 @@
 import React, { useState, useEffect } from 'react';
 import { useStoreState, useStoreActions } from 'easy-peasy';
-import Paper from 'components/Paper';
+import { Paper } from 'components/Paper';
 
 const {{name}} = () => {
   const [name, setName] = useState('');
