--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -2,7 +2,7 @@ import React, { useState, useEffect } from 'react';
 import Layout from 'components/Layout';
 import { useStoreState, useStoreActions } from 'easy-peasy';
 import { Link } from '@reach/router';
-import Paper from 'components/Paper';
+import { Paper } from 'components/Paper';
 
 const {{name}} = () => {
   const [touches, setTouches] = useState(0);
